GH-4 Added checkboxes to enable and disable some speaker channels
